[feature] add logger, refactor structure

--- a/ZavenDotNetInterview.App/Views/Jobs/Index.cshtml
+++ b/ZavenDotNetInterview.App/Views/Jobs/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using ZavenDotNetInterview.App.Models
-
-@model List<Job>
+﻿@model List<ZavenDotNetInterview.Core.Models.Job>
 
 @{
     ViewBag.Title = "Index";
