--- a/ZavenDotNetInterview.App/Views/Jobs/Index.cshtml
+++ b/ZavenDotNetInterview.App/Views/Jobs/Index.cshtml
@@ -9,6 +9,6 @@
 @Html.ActionLink("Create", "Create")
 @Html.ActionLink("Process", "Process")
 
-<table id="jobs_table"></table>
+<table id="jobs_table" class="table"></table>
 
 <script src="../../Content/js/site/jobs/table-director.js"></script>
