[feature/5] add jobs sorting asc

--- a/ZavenDotNetInterview.App/Views/Jobs/Index.cshtml
+++ b/ZavenDotNetInterview.App/Views/Jobs/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<ZavenDotNetInterview.Core.Models.Job>
+﻿@using ZavenDotNetInterview.Infrastructure.DTOs;
+@model List<JobDto>
 
 @{
     ViewBag.Title = "Index";
