--- a/ZavenDotNetInterview.App/Views/Jobs/Index.cshtml
+++ b/ZavenDotNetInterview.App/Views/Jobs/Index.cshtml
@@ -10,6 +10,9 @@
 @Html.ActionLink("Create", "Create")
 @Html.ActionLink("Process", "Process")
 
-<table id="jobs_table" class="table"></table>
+<tbody>
+    <table id="jobs_table" class="table table-bordered"></table>
+</tbody>
+
 
 <script src="../../Content/js/site/jobs/table-director.js"></script>
